# RL_and_GT

./: .gitignore  Gymnasium alumno.ipynb  MLP.py  README.md  config_manager.py  main.py  neuroevolution_lunarlander.py  pyproject.toml  q_main.py
agents_rl/: base.py  mc_agent.py  q_agent.py  sarsa_agent.py
configurations/: config_1.yaml  config_2.yaml  config_fb.yaml  config_ll_1.yaml  config_ll_3.yaml  config_taxi.yaml
experiment_manager/: __init__.py  config_exp.py  config_manager.py  experiment.py
experiment_manager/agents_rl/: __init__.py  base.py  mc_agent.py
neuroevolution/: __init__.py  config_exp.py  config_manager.py  experiment.py
