[project]
name = "neuro_rl"
version = "0.1.0"
description = "P1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deap>=1.4.3",
    "gymnasium>=1.2.3",
    "ipykernel>=7.1.0",
    "loky>=3.5.6",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pygame>=2.6.1",
    "pyyaml>=6.0.3",
]
